--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,14 @@
     "@chakra-ui/icons": "^2.0.2",
     "@chakra-ui/react": "^2.4.2",
     "@chakra-ui/theme-tools": "^2.0.2",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/editorjs": "^2.26.4",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/paragraph": "^2.9.0",
+    "@editorjs/warning": "^1.3.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.0",
     "@urql/exchange-graphcache": "^5.0.5",
@@ -22,6 +30,7 @@
     "next-urql": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-editor-js": "^2.1.0",
     "react-is": "^18.2.0",
     "urql": "^3.0.3",
     "wonka": "^6.1.2"
