--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
+    "@chakra-ui/pro-theme": "^0.0.57",
     "@chakra-ui/react": "^2.4.2",
     "@chakra-ui/theme-tools": "^2.0.2",
     "@editorjs/code": "^2.8.0",
@@ -20,8 +21,8 @@
     "@editorjs/inline-code": "^1.4.0",
     "@editorjs/paragraph": "^2.9.0",
     "@editorjs/warning": "^1.3.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.9.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@urql/exchange-graphcache": "^5.0.5",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.0",
